--- a/client/src/components/TrackingHistory.css
+++ b/client/src/components/TrackingHistory.css
@@ -1,99 +1,68 @@
-/* TrackingHistory.css */
-
 .tracking-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
+  background-color: #f8f9fa;
+  min-height: 100vh;
 }
 
-.tracking-card {
-  width: 100%;
-  max-width: 1000px;
+.custom-card {
+  width: 80%;
+  max-width: 900px;
   margin: 20px 0;
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(167, 133, 133, 0.1);
-  border-radius: 8px;
-}
-
-.graph-card {
-  height: auto;
-  /* Default height */
-}
-
-.chart-container {
-  width: 100%;
-  height: 500px;
-}
-
-.new-measurements-card {
-  width: 100%;
-  max-width: 1000px;
-  margin: 20px 0;
-  padding: 20px;
+  border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
 }
 
-.new-measurements-form {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
+.card-header {
+  background-color: #007bff;
+  color: white;
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
-.new-measurements-form .form-group {
-  display: flex;
-  flex-direction: column;
-  flex: 1 1 200px;
-  /* Grow to fill available space, with a minimum width of 200px */
+.card-body {
+  padding: 20px;
+  background-color: white;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-.new-measurements-form .form-control {
-  border-radius: 0.25rem;
-  width: 100%;
+.card-text {
+  margin: 0;
+  font-size: 1.2rem;
 }
 
-.new-measurements-form .btn {
-  width: 100%;
-  border-radius: 0.25rem;
-  margin-top: 20px;
+.card-text div {
+  margin-bottom: 10px;
 }
 
-.new-measurements-form label {
-  margin-bottom: 5px;
+.card-text strong {
   font-weight: bold;
+  margin-right: 10px;
 }
 
 @media (max-width: 768px) {
-  .tracking-container {
-    width: 100%;
-    padding: 15px;
+  .custom-card {
+      width: 100%;
+      margin: 10px 0;
   }
 
-  .tracking-card,
-  .new-measurements-card {
-    width: 100%;
+  .card-header {
+      font-size: 1.2rem;
   }
 
-  .chart-container {
-    height: 300px;
+  .card-text {
+      font-size: 1rem;
   }
+}
 
-  .graph-card {
-    max-height: 400px;
-    /* Maximum height for mobile devices */
-  }
-
-  .new-measurements-form .form-group {
-    flex: 1 1 100%;
-    /* Grow to fill available space, with a minimum width of 100% */
-  }
-
-  .new-measurements-form .btn {
-    margin-top: 15px;
-    font-size: 14px;
-  }
+/* Add any additional styles for the NewMeasurements component if necessary */
+.new-measurements {
+  width: 100%;
+  margin-top: 20px;
 }
