--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,65 +1,50 @@
-/* App.css */
-
-body {
-  direction: rtl;
-  font-family: Arial, sans-serif;
-}
-
-.app-container {
-  display: flex;
-  text-align: right;
-}
-
-.main-content {
-  flex-grow: 1;
-  padding: 20px;
-}
-
-.main-content.full-width {
-  width: 100%;
-}
-
-.chart-container {
-  width: 100%;
-  height: 500px;
-}
-
-.logout {
-  color: black !important;
-  margin-top: auto;
-}
-
-/* Responsive adjustments */
-@media (max-width: 600px) {
-  .form-container {
-    width: 60%;
-    /* Utilize more width on smaller screens */
-    padding: 15px;
-    /* Adjust padding */
-  }
-}
-
-input[type="text"],
-input[type="password"] {
-  width: 100%;
-  /* Make input fields take full width */
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-button {
-  width: 100%;
-  /* Make button take full width */
-  padding: 10px;
-  background-color: #007bff;
+/* app.css */
+header {
+  background-color: #222;
   color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  padding: 10px 20px;
+  text-align: center;
 }
 
-button:hover {
-  background-color: #0056b3;
+footer {
+  background-color: #222;
+  color: white;
+  text-align: center;
+  padding: 10px 20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: right;
+
+}
+
+/* Responsive Grid */
+.grid {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
+
+.card {
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  border-radius: 8px;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+@media (max-width: 768px) {
+  .container, header, footer {
+      padding: 10px;
+  }
+
+  .grid {
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  }
 }
