--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,104 +1,79 @@
-/* Navbar.css */
 .navbar-container {
-  display: flex;
-  flex-direction: column;
+  position: relative;
+  direction: rtl; /* This sets the text direction to right-to-left */
 }
 
 .navbar-header {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  padding: 10px;
-  background-color: #f8f9fa;
-  border-bottom: 1px solid #e9ecef;
+  align-items: center;
+  padding: 1rem;
+  background-color: #333;
+  color: #fff;
 }
 
 .toggle-button {
   background: none;
   border: none;
+  color: #fff;
   font-size: 1.5rem;
-  cursor: pointer;
-  color:#007bff;
-}
-
-.sidebar {
-  width: 200px; /* Smaller width */
-  height: 100vh;
-  background-color: #f8f9fa;
-  padding: 20px;
-  position: fixed;
-  right: -200px;
-  top: 0;
-  transition: right 0.3s;
-  z-index: 1000;
-  display: flex;
-  flex-direction: column; /* Ensure flex direction is column */
-}
-
-.sidebar.open {
-  right: 0;
-}
-
-.sidebar-header {
-  padding: 10px 0;
-  text-align: center;
-  font-size: 1.25rem;
-  font-weight: bold;
-  border-bottom: 1px solid #e9ecef;
-}
-
-.nav-item {
   display: flex;
   align-items: center;
-  padding: 10px 15px;
-  color: #495057;
-  text-decoration: none;
 }
 
-.nav-item i {
-  margin-right: 10px;
-}
-
-.nav-item:hover {
-  background-color: #e9ecef;
-  color: #007bff;
-  text-decoration: none;
-}
-
-.logout {
-  color: black;
-  margin-top: auto; /* Push the logout button to the bottom */
-}
-
-.spacer {
-  flex: 10;
-  
+.toggle-button .badge {
+  margin-left: 0.5rem;
 }
 
 .overlay {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  transition: opacity 0.3s;
+  z-index: 998;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, visibility 0.3s;
 }
 
 .overlay.open {
-  display: block;
   opacity: 1;
+  visibility: visible;
 }
 
-@media (max-width: 768px) {
-  .sidebar {
-    width: 200px; /* Smaller width */
-    right: -200px;
-  }
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: 0; /* Move the sidebar to the right */
+  width: 250px;
+  height: 100%;
+  background-color: #333;
+  color: #fff;
+  z-index: 999;
+  transform: translateX(100%); /* Change translateX to move the sidebar off the right */
+  transition: transform 0.3s;
+}
 
-  .sidebar.open {
-    right: 0;
-  }
+.sidebar.open {
+  transform: translateX(0);
+}
+
+.nav-item {
+  padding: 1rem;
+  color: #fff;
+  text-align: right; /* Align text to the right */
+}
+
+.nav-item:hover {
+  background-color: #444;
+}
+
+.logout {
+  margin-top: auto;
+}
+
+.spacer {
+  flex-grow: 1;
 }
